--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons": "^1.56.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
     "next": "12.0.8",
