--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
     "next": "12.1.0",
+    "next-pwa": "^5.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
