--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "@tabler/icons": "^1.56.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
     "next": "12.1.0",
     "next-pwa": "^5.6.0",
