--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@next/font": "^13.1.6",
     "@tabler/icons": "^1.56.0",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-highlightjs": "^2.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
