--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "@tabler/icons": "^1.56.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
