--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown-it-sup": "^1.0.0",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-highlightjs": "^2.0.1"
