--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-highlightjs": "^2.0.1"
