--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@next/font": "^13.1.6",
@@ -24,6 +25,8 @@
     "markdown-it-sup": "^1.0.0",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
+    "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-highlightjs": "^2.0.1"
